--- a/content/程式.html
+++ b/content/程式.html
@@ -133,21 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">動態網站 << <a href='動態網站.html'>Previous</a> <a href='機電控制.html'>Next</a> >> 機電控制<br /><h1>數位簽章</h1>
-<p><a href="https://letsencrypt.org/">https://letsencrypt.org/</a></p>
-<p><a href="https://certbot.eff.org/lets-encrypt/ubuntufocal-nginx">https://certbot.eff.org/lets-encrypt/ubuntufocal-nginx</a> </p>
-<pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false">sudo apt-get update
-sudo apt-get install software-properties-common
-sudo add-apt-repository universe
-sudo apt-get update
-
-sudo apt-get install certbot python3-certbot-nginx
-
-sudo certbot certonly --nginx
-
-sudo certbot renew --dry-run</pre>
-<p></p>
-<br />動態網站 << <a href='動態網站.html'>Previous</a> <a href='機電控制.html'>Next</a> >> 機電控制</div>
+    <div id="tipue_search_content">Gradient descent optimization algorithms << <a href='Gradient descent optimization algorithms.html'>Previous</a> <a href='Ref.html'>Next</a> >> Ref<br /><h1>程式</h1>
+<p>練用的Pygame程式：<a href="https://github.com/s40723150/pygame_airhockey">https://github.com/s40723150/pygame_airhockey</a></p><br />Gradient descent optimization algorithms << <a href='Gradient descent optimization algorithms.html'>Previous</a> <a href='Ref.html'>Next</a> >> Ref</div>
         
     <!-- footer -->
       <div class="container">
