--- a/content/neural_network_in_python.pdf.html
+++ b/content/neural_network_in_python.pdf.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='專題定位.html'>專題定位</a><li><a href='LaTeX.html'>LaTeX</a><li><a href='參考資料.html'>參考資料</a><li><a href='研究生考試.html'>研究生考試</a></li></ul><li class='has-children'><a href='動態網站.html'>動態網站</a><ul class='dropdown'><li><a href='數位簽章.html'>數位簽章</a><li><a href='機電控制.html'>機電控制</a><li><a href='iRobot Create.html'>iRobot Create</a></li></ul><li class='has-children'><a href='深度學習.html'>深度學習</a><ul class='dropdown'><li><a href='電腦.html'>電腦</a><li><a href='Flask.html'>Flask</a></li></ul><li class='has-children'><a href='強化學習.html'>強化學習</a><ul class='dropdown'><li><a href='2021.html'>2021</a><li><a href='Reference.html'>Reference</a><li class='has-children'><a href='類神經網路學習.html'>類神經網路學習</a><ul class='dropdown'><li><a href='neural_network_in_python.pdf.html'>neural_network_in_python.pdf</a></li></li></ul></ul><li class='has-children'><a href='優化器.html'>優化器</a><ul class='dropdown'><li><a href='Gradient Descent Optimizer.html'>Gradient Descent Optimizer</a><li><a href='Stochastic gradient descent.html'>Stochastic gradient descent</a><li><a href='Gradient descent optimization algorithms.html'>Gradient descent optimization algorithms</a></li></ul><li class='has-children'><a href='程式.html'>程式</a><ul class='dropdown'><li><a href='RL-Pong Game.html'>RL-Pong Game</a></li></ul><li class='has-children'><a href='Ref.html'>Ref</a><ul class='dropdown'><li><a href='Flutter.html'>Flutter</a><li><a href='CMSiMDE.html'>CMSiMDE</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='專題定位.html'>專題定位</a><li><a href='LaTeX.html'>LaTeX</a><li><a href='參考資料.html'>參考資料</a><li><a href='研究生考試.html'>研究生考試</a></li></ul><li class='has-children'><a href='動態網站.html'>動態網站</a><ul class='dropdown'><li><a href='數位簽章.html'>數位簽章</a><li><a href='機電控制.html'>機電控制</a><li><a href='iRobot Create.html'>iRobot Create</a></li></ul><li class='has-children'><a href='深度學習.html'>深度學習</a><ul class='dropdown'><li><a href='電腦.html'>電腦</a><li><a href='Flask.html'>Flask</a></li></ul><li class='has-children'><a href='強化學習.html'>強化學習</a><ul class='dropdown'><li><a href='2021.html'>2021</a><li><a href='Reference.html'>Reference</a><li class='has-children'><a href='類神經網路學習.html'>類神經網路學習</a><ul class='dropdown'><li><a href='neural_network_in_python.pdf.html'>neural_network_in_python.pdf</a></li></ul><li><a href='參考範例.html'>參考範例</a></li></ul><li class='has-children'><a href='優化器.html'>優化器</a><ul class='dropdown'><li><a href='Gradient Descent Optimizer.html'>Gradient Descent Optimizer</a><li><a href='Stochastic gradient descent.html'>Stochastic gradient descent</a><li><a href='Gradient descent optimization algorithms.html'>Gradient descent optimization algorithms</a></li></ul><li class='has-children'><a href='程式.html'>程式</a><ul class='dropdown'><li><a href='RL-Pong Game.html'>RL-Pong Game</a></li></ul><li class='has-children'><a href='Ref.html'>Ref</a><ul class='dropdown'><li><a href='Flutter.html'>Flutter</a><li><a href='CMSiMDE.html'>CMSiMDE</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">類神經網路學習 << <a href='類神經網路學習.html'>Previous</a> <a href='優化器.html'>Next</a> >> 優化器<br /><h1>neural_network_in_python.pdf</h1>
+    <div id="tipue_search_content">類神經網路學習 << <a href='類神經網路學習.html'>Previous</a> <a href='參考範例.html'>Next</a> >> 參考範例<br /><h1>neural_network_in_python.pdf</h1>
 <p>說明前三章的程式碼</p>
 <h4>2LayerNeuralNetwork.py</h4>
 <p><strong>origin codes:</strong></p>
@@ -303,13 +303,13 @@ y = np.array(([1], [0], [0], [0], [0], [0], [0], [1]), dtype=float)</pre>
         # activation function
         # 使用Sigmoid function算法(S-curve)
         return 1/(1+np.exp(-s))</pre>
-<p><img caption="false" height="100" src="./../images/Sigmoid_Function.jpg" width="222"/></p>
+<p><img caption="false" height="70" src="./../images/Sigmoid_Function.png" width="166"/></p>
 <p><strong>activationSigmoidPrime</strong></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">def activationSigmoidPrime(self, s):
         # First derivative of activationSigmoid
         # calculus time!
         return s * (1 - s)</pre>
-<p><strong><img caption="false" height="100" src="./../images/Sigmoid_Function.jpg" width="222"/></strong></p>
+<p><strong><img caption="false" height="50" src="./../images/Sigmoid_function_prime.jpg" width="257"/></strong></p>
 <p><strong>saveSumSquaredLossList(儲存損失函數值)</strong></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"> def saveSumSquaredLossList(self,i,error):
         lossFile.write(str(i)+","+str(error.tolist())+'\n')</pre>
@@ -425,7 +425,7 @@ result = model.predict(X ).round()
 #替輸入樣本產生輸出預測
 print (result)
 #印出結果</pre>
-<p><a href="./../downloads/整理資料/neural_network_in_python_summary.pdf">整理好的PDF檔</a><br/><br/></p><br />類神經網路學習 << <a href='類神經網路學習.html'>Previous</a> <a href='優化器.html'>Next</a> >> 優化器</div>
+<p><a href="./../downloads/整理資料/neural_network_in_python_summary.pdf">整理好的PDF檔</a></p><br />類神經網路學習 << <a href='類神經網路學習.html'>Previous</a> <a href='參考範例.html'>Next</a> >> 參考範例</div>
         
     <!-- footer -->
       <div class="container">
