--- a/content/Markov Decision Process.html
+++ b/content/Markov Decision Process.html
@@ -133,248 +133,24 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">程式 << <a href='程式.html'>Previous</a> <a href='Ref.html'>Next</a> >> Ref<br /><h1>RL-Pong Game</h1>
-<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">import pygame
-import random , sys
-from pygame.locals import *
-import numpy as np
-from collections import deque
-import tensorflow as tf  # http://blog.topspeedsnail.com/archives/10116
-import cv2  # http://blog.topspeedsnail.com/archives/4755
-
-tf.compat.v1.disable_eager_execution()
-
-BLACK = (0, 0, 0)
-WHITE = (255, 255, 255)
-
-SCREEN_SIZE = [320, 400]
-BAR_SIZE = [50, 5]
-BAR2_SIZE = [50,5]
-BALL_SIZE = [15, 15]
-
-# 神經網絡的輸出
-MOVE_STAY = [1, 0, 0]
-MOVE_LEFT = [0, 1, 0]
-MOVE_RIGHT = [0, 0, 1]
-
-
-class Game(object):
-    def __init__(self):
-        pygame.init()
-        self.clock = pygame.time.Clock()
-        self.screen = pygame.display.set_mode(SCREEN_SIZE)
-        pygame.display.set_caption('Simple Game')
-
-        self.ball_pos_x = SCREEN_SIZE[0] // 2 - BALL_SIZE[0] / 2
-        self.ball_pos_y = SCREEN_SIZE[1] // 2 - BALL_SIZE[1] / 2
-
-        self.ball_dir_x = -1  # -1 = left 1 = right
-        self.ball_dir_y = -1  # -1 = up   1 = down
-        self.ball_pos = pygame.Rect(self.ball_pos_x, self.ball_pos_y, BALL_SIZE[0], BALL_SIZE[1])
-
-        self.bar_pos_x = SCREEN_SIZE[0] // 2 - BAR_SIZE[0] // 2
-        self.bar_pos = pygame.Rect(self.bar_pos_x, SCREEN_SIZE[1] - BAR_SIZE[1]-5, BAR_SIZE[0], BAR_SIZE[1])
-
-        self.bar2_pos_x = SCREEN_SIZE[0] // 2 - BAR_SIZE[0] // 2
-        self.bar2_pos = pygame.Rect(self.bar_pos_x, 5, BAR_SIZE[0], BAR_SIZE[1])
-        self.bar2_speed = 7
-
-
-    # action是MOVE_STAY、MOVE_LEFT、MOVE_RIGHT
-    # ai控制棒子左右移動；返回遊戲界面像素數和對應的獎勵。(像素-&gt;獎勵-&gt;強化棒子往獎勵高的方向移動)
-
-
-    def step(self, action):
-
-        if action == MOVE_LEFT:
-            self.bar_pos_x = self.bar_pos_x - 2
-        elif action == MOVE_RIGHT:
-            self.bar_pos_x = self.bar_pos_x + 2
-        else:
-            pass
-        if self.bar_pos_x &lt; 0:
-            self.bar_pos_x = 0
-        if self.bar_pos_x &gt; SCREEN_SIZE[0] - BAR_SIZE[0]:
-            self.bar_pos_x = SCREEN_SIZE[0] - BAR_SIZE[0]
-
-        if  self.bar2_pos.left &lt; self.ball_pos.x:
-            self.bar2_pos.x += self.bar2_speed
-        if  self.bar2_pos.right &gt; self.ball_pos.x:
-            self.bar2_pos.x -= self.bar2_speed
-
-        if  self.bar2_pos.left &lt;= 0:
-            self.bar2_pos.left = 0
-        if  self.bar2_pos.right &gt;= SCREEN_SIZE[0]:
-            self.bar2_pos.right = SCREEN_SIZE[0]
-
-        self.screen.fill(BLACK)
-        self.bar_pos.left = self.bar_pos_x
-        pygame.draw.rect(self.screen, WHITE, self.bar_pos)
-        pygame.draw.rect(self.screen, WHITE, self.bar2_pos)
-        pygame.draw.rect(self.screen, (255, 0, 0), Rect((5, 5), (310, 390)), 2)
-        pygame.draw.line(self.screen, (255, 0, 0), (7, 195), (313, 195), 2)
-        pygame.draw.circle(self.screen, (255, 0, 0), (160, 195), 50, 2)
-
-        self.ball_pos.left += self.ball_dir_x * 2
-        self.ball_pos.bottom += self.ball_dir_y * 3
-        pygame.draw.rect(self.screen, WHITE, self.ball_pos)
-
-        if self.ball_pos.top &lt;= 0 or self.ball_pos.bottom &gt;= (SCREEN_SIZE[1] - BAR_SIZE[1] + 1):
-            self.ball_dir_y = self.ball_dir_y * -1
-        if self.ball_pos.left &lt;= 0 or self.ball_pos.right &gt;= (SCREEN_SIZE[0]):
-            self.ball_dir_x = self.ball_dir_x * -1
-
-        reward = 0
-        if self.bar_pos.top &lt;= self.ball_pos.bottom and (
-                self.bar_pos.left &lt; self.ball_pos.right and self.bar_pos.right &gt; self.ball_pos.left):
-            reward = 1  # 擊中獎勵
-        elif self.bar_pos.top &lt;= self.ball_pos.bottom and (
-                self.bar_pos.left &gt; self.ball_pos.right or self.bar_pos.right &lt; self.ball_pos.left):
-            reward = -1  # 沒擊中懲罰
-
-        # 獲得遊戲界面像素
-        screen_image = pygame.surfarray.array3d(pygame.display.get_surface())
-        pygame.display.update()
-        # 返回遊戲界面像素和對應的獎勵
-        return reward, screen_image
-
-
-# learning_rate
-LEARNING_RATE = 0.99
-# 更新梯度
-INITIAL_EPSILON = 1.0
-FINAL_EPSILON = 0.05
-# 測試觀測次數
-EXPLORE = 500000
-OBSERVE = 50000
-# 存儲過往經驗大小
-REPLAY_MEMORY = 500000
-
-BATCH = 100
-
-output = 3  # 輸出層神經元數。代表3種操作-MOVE_STAY:[1, 0, 0]  MOVE_LEFT:[0, 1, 0]  MOVE_RIGHT:[0, 0, 1]
-input_image = tf.compat.v1.placeholder("float", [None, 80, 100, 4])  # 遊戲像素
-action = tf.compat.v1.placeholder("float", [None, output])  # 操作
-
-
-# 定義CNN-卷積神經網絡 參考:http://blog.topspeedsnail.com/archives/10451
-def convolutional_neural_network(input_image):
-    weights = {'w_conv1': tf.Variable(tf.zeros([8, 8, 4, 32])),
-               'w_conv2': tf.Variable(tf.zeros([4, 4, 32, 64])),
-               'w_conv3': tf.Variable(tf.zeros([3, 3, 64, 64])),
-               'w_fc4': tf.Variable(tf.zeros([3456, 784])),
-               'w_out': tf.Variable(tf.zeros([784, output]))}
-
-    biases = {'b_conv1': tf.Variable(tf.zeros([32])),
-              'b_conv2': tf.Variable(tf.zeros([64])),
-              'b_conv3': tf.Variable(tf.zeros([64])),
-              'b_fc4': tf.Variable(tf.zeros([784])),
-              'b_out': tf.Variable(tf.zeros([output]))}
-
-    conv1 = tf.nn.relu(
-        tf.nn.conv2d(input_image, weights['w_conv1'], strides=[1, 4, 4, 1], padding="VALID") + biases['b_conv1'])
-    conv2 = tf.nn.relu(
-        tf.nn.conv2d(conv1, weights['w_conv2'], strides=[1, 2, 2, 1], padding="VALID") + biases['b_conv2'])
-    conv3 = tf.nn.relu(
-        tf.nn.conv2d(conv2, weights['w_conv3'], strides=[1, 1, 1, 1], padding="VALID") + biases['b_conv3'])
-    conv3_flat = tf.reshape(conv3, [-1, 3456])
-    fc4 = tf.nn.relu(tf.matmul(conv3_flat, weights['w_fc4']) + biases['b_fc4'])
-
-    output_layer = tf.matmul(fc4, weights['w_out']) + biases['b_out']
-    return output_layer
-
-
-# 深度強化學習入門: https://www.nervanasys.com/demystifying-deep-reinforcement-learning/
-# 訓練神經網絡
-def train_neural_network(input_image):
-    predict_action = convolutional_neural_network(input_image)
-
-    argmax = tf.compat.v1.placeholder("float", [None, output])
-    gt = tf.compat.v1.placeholder("float", [None])
-
-    action = tf.reduce_sum(tf.multiply(predict_action, argmax), axis=1)
-    cost = tf.reduce_mean(tf.square(action - gt))
-    optimizer = tf.compat.v1.train.AdamOptimizer(1e-6).minimize(cost)
-
-    game = Game()
-    D = deque()
-
-    _, image = game.step(MOVE_STAY)
-    # 轉換爲灰度值
-    image = cv2.cvtColor(cv2.resize(image, (100, 80)), cv2.COLOR_BGR2GRAY)
-    # 轉換爲二值
-    ret, image = cv2.threshold(image, 1, 255, cv2.THRESH_BINARY)
-    input_image_data = np.stack((image, image, image, image), axis=2)
-
-    with tf.compat.v1.Session() as sess:
-        sess.run(tf.compat.v1.initialize_all_variables())
-
-        saver = tf.compat.v1.train.Saver()
-
-        n = 0
-        epsilon = INITIAL_EPSILON
-        while True:
-            for event in pygame.event.get():
-             if event.type == pygame.QUIT:
-                 pygame.quit()
-                 sys.exit()
-
-
-            action_t = predict_action.eval(feed_dict={input_image: [input_image_data]})[0]
-
-            argmax_t = np.zeros([output], dtype=np.int)
-            if (random.random() &lt;= INITIAL_EPSILON):
-                maxIndex = random.randrange(output)
-            else:
-                maxIndex = np.argmax(action_t)
-            argmax_t[maxIndex] = 1
-            if epsilon &gt; FINAL_EPSILON:
-                epsilon -= (INITIAL_EPSILON - FINAL_EPSILON) / EXPLORE
-
-            # for event in pygame.event.get():  macOS需要事件循環，否則白屏
-            #	if event.type == QUIT:
-            #		pygame.quit()
-            #		sys.exit()
-            reward, image = game.step(list(argmax_t))
-
-            image = cv2.cvtColor(cv2.resize(image, (100, 80)), cv2.COLOR_BGR2GRAY)
-            ret, image = cv2.threshold(image, 1, 255, cv2.THRESH_BINARY)
-            image = np.reshape(image, (80, 100, 1))
-            input_image_data1 = np.append(image, input_image_data[:, :, 0:3], axis=2)
-
-            D.append((input_image_data, argmax_t, reward, input_image_data1))
-
-            if len(D) &gt; REPLAY_MEMORY:
-                D.popleft()
-
-            if n &gt; OBSERVE:
-                minibatch = random.sample(D, BATCH)
-                input_image_data_batch = [d[0] for d in minibatch]
-                argmax_batch = [d[1] for d in minibatch]
-                reward_batch = [d[2] for d in minibatch]
-                input_image_data1_batch = [d[3] for d in minibatch]
-
-                gt_batch = []
-
-                out_batch = predict_action.eval(feed_dict={input_image: input_image_data1_batch})
-
-                for i in range(0, len(minibatch)):
-                    gt_batch.append(reward_batch[i] + LEARNING_RATE * np.max(out_batch[i]))
-
-                optimizer.run(feed_dict={gt: gt_batch, argmax: argmax_batch, input_image: input_image_data_batch})
-
-            input_image_data = input_image_data1
-            n = n + 1
-
-            if n % 10000 == 0:
-                saver.save(sess, 'game.cpk', global_step=n)  # 保存模型
-
-            print(n, "epsilon:", epsilon, " ", "action:", maxIndex, " ", "reward:", reward)
-
-
-train_neural_network(input_image)</pre>
-<p></p>
-<br />程式 << <a href='程式.html'>Previous</a> <a href='Ref.html'>Next</a> >> Ref</div>
+    <div id="tipue_search_content">參考範例 << <a href='參考範例.html'>Previous</a> <a href='優化器.html'>Next</a> >> 優化器<br /><h1>Markov Decision Process</h1>
+<h4>Markov Chain</h4>
+<p>當前決策只會影響下個狀態，當前狀態轉移(action)到其他狀態的機率有所差異。</p>
+<h4>Markov Reward Process</h4>
+<p>action 到指定狀態會獲得獎勵。</p>
+<p style="text-align: center;">R(s<sub>t</sub>=s) = 𝔼[r<sub>t</sub>|s<sub>t</sub> = s]</p>
+<p style="text-align: center;">γ<span>∈[0, 1]</span></p>
+<ul style="list-style-type: disc;">
+<li><span>Horizon：<br/>在無限的狀態以有限的狀態表示</span></li>
+<li><span>Return：<br/></span><span>G<sub>t</sub> = R<sub>t+1</sub>+ γR<sub>t+2</sub> + <span>γ<sup>2</sup></span><span>R</span><sub>t+3</sub> <span>+ </span><span>γ<sup>3</sup></span><span>R</span><sub>t+4</sub> + ... <span>+ </span><span>γ<sup>T-t-1</sup></span><span>R</span><sub>T<br/></sub>越早做出正確決策獎勵越高</span></li>
+<li><span>State value function：<br/></span>V<sub>t</sub>(S) = <span>𝔼[G</span><sub>t</sub><span>|s</span><sub>t</sub><span><span> </span>= s]<br/>決策價值</span></li>
+</ul>
+<h4><span>Discount Factor (γ)</span></h4>
+<ol>
+<li>越早做出有獎勵的決策，獎勵越高</li>
+<li>做出有價值的決策<span>γ = 1，不分決策順序先後</span></li>
+<li><span>無用的決策γ = 0，不會得到獎勵</span></li>
+</ol><br />參考範例 << <a href='參考範例.html'>Previous</a> <a href='優化器.html'>Next</a> >> 優化器</div>
         
     <!-- footer -->
       <div class="container">
