--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -949,11 +949,11 @@ print (result)
 <h4>prepro</h4>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">def prepro(I):
     """ prepro 210x160x3 uint8 frame into 6400 (80x80) 1D float vector """
-    I = I[35:195] # crop，取第35項到195項
-    I = I[::2,::2,0] # downsample by factor of 2
-    I[I == 144] = 0 # erase background (background type 1)
-    I[I == 109] = 0 # erase background (background type 2)
-    I[I != 0] = 1 # everything else (paddles, ball) just set to 1
+    I = I[35:195] # 裁掉頂部的計分和底部空白，剩下160x160
+    I = I[::2,::2,0] # 從160x160縮減到80x80，取出第一個顏色channel
+    I[I == 144] = 0 # 將背景顏色變成黑色
+    I[I == 109] = 0 # 將背景顏色變成黑色
+    I[I != 0] = 1 # 球和擊錘變成白色
     return I.astype(np.float).ravel()</pre>
 <h4>discount rewards</h4>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">def discount_rewards(r):
@@ -1099,8 +1099,7 @@ print (result)
         else:
             outstring = '!!!!!!!'
         
-        print ('ep '+ str(episode_number) + ': game finished, reward:' +str(reward)+ outstring )</pre>
-<h2>Markov Decision Process</h2>
+        print ('ep '+ str(episode_number) + ': game finished, reward:' +str(reward)+ outstring )</pre><h2>Markov Decision Process</h2>
 <h4>Markov Chain</h4>
 <p>當前決策只會影響下個狀態，當前狀態轉移(action)到其他狀態的機率有所差異。</p>
 <h4>Markov Reward Process</h4>
